fix/ overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
 }
 
 html {
-  overflow-y: hidden;
+  overflow-y: auto;
   margin: 0px;
   height: 100%;
   width: 100%;
